--- a/index.html
+++ b/index.html
@@ -22,6 +22,16 @@
         <p>Front-end developer based in Czech Republic</p>
         <a href="#" class="btn button mt-3">Get Started</a>
     </div>
+    <div class="project mt-5">
+        <h3>Weather App</h3>
+        <div class="paragraph mt-3 mb-5">
+        <div>This is a live weather application showing the current weather all around the world. The website has been built using React and an open-source weather API.</div>
+        </div>
+        <a href="#" class="btn button-outline">Go to Weather App</a>
+        <div class="img-fluid ">
+            <img src="images/weathap.PNG" alt="weather app" />
+        </div>
+    </div>
     
 </body>
 </html>
