--- a/index.html
+++ b/index.html
@@ -27,9 +27,29 @@
         <div class="paragraph mt-3 mb-5">
         <div>This is a live weather application showing the current weather all around the world. The website has been built using React and an open-source weather API.</div>
         </div>
-        <a href="#" class="btn button-outline">Go to Weather App</a>
-        <div class="img-fluid ">
-            <img src="images/weathap.PNG" alt="weather app" />
+        <a href="https://admiring-curie-afac98.netlify.app" target="_blank" class="btn button-outline">Go to Weather App</a>
+        <div class="mt-5">
+            <img src="images/weathap.PNG" alt="weather app" class="img-fluid"/>
+        </div>
+    </div>
+    <div class="project mt-5">
+        <h3>Dictionary</h3>
+        <div class="paragraph mt-3 mb-5">
+        <div>The dictionary is based on an API and displays the pronunciation, meaning, synonyms and examples of use of any word, as well as related images. The project has been built in React workframe.</div>
+        </div>
+        <a href="https://frosty-nobel-5a502d.netlify.app" target="_blank" class="btn button-outline">Go to Weather App</a>
+        <div class="mt-5">
+            <img src="images/dict.PNG" alt="dictionary app" class="img-fluid"/>
+        </div>
+    </div>
+    <div class="project mt-5">
+        <h3>Weather Forecast</h3>
+        <div class="paragraph mt-3 mb-5">
+        <div>My first project built in Vanilla Javascript. It includes current weather in your location and three default cities, as well as a search option to find out about the weather in every part of the world. Also, you can check out the forecast for the next 5 days.</div>
+        </div>
+        <a href="https://youthful-borg-cd0b97.netlify.app" target="_blank" class="btn button-outline">Go to Weather Forecast</a>
+        <div class="mt-5">
+            <img src="images/forecast.PNG" alt="weather app" class="img-fluid"/>
         </div>
     </div>
     
