--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
             <img src="images/forecast.PNG" alt="weather app" class="img-fluid"/>
         </div>
     </div>
+    <div class="footnote">Hosted on <a href="https://github.com/Fiorlore/portfolio-project" target="_blank">Git-Hub</a></div>
     
 </body>
 </html>
