added contact page

--- a/contact.html
+++ b/contact.html
@@ -16,22 +16,21 @@
     <title>Anna Kwiatkowska - about</title>
 </head>
 <body>
-    <div class="container section">
-        <div class="row">
-            <div class="col-md-6">
-                <div class="content">
-                    <h2>Hi! I am</h2>
-                    <h1>Anna Kwiatkowska</h1>
-                    <p>Front-end developer based in Czech Republic. I come from Poland, but I have been living Prague for the last 3 years. I started my coding career with the SheCodes course. See all my projects I have developed so far. </p>
-                    
-                    <a class="btn button" href="#">View all projects</a>
-                
-                </div>
-            </div>
-            <div class="col-md-6">
-                <img class="img-fluid pic" src="images/anna.jpg"/>
-            </div>
-        </div>
+    <h1 class="text-center mt-5 mb-5">Let's get in touch!</h1>
+    <div class="container contact text-center">
+        <h3>Email</h3>
+        <a href="mailto:wkwiatki@gmail.com">
+        <p>wkwiatki@gmail.com</p>
+    </a>
+    <h3>Twitter</h3>
+        <a href="https://twitter.com/kwiatkoska" target="_blank">
+        <p>@kwiatkoska</p>
+    </a>
+    <h3>Instagram</h3>
+        <a href="https://instagram.com/annakwiat" target="_blank">
+        <p>@annakwiat</p>
+    </a>
+
     </div>
 </body>
 </html>
