--- a/contact.html
+++ b/contact.html
@@ -16,6 +16,22 @@
     <title>Anna Kwiatkowska - about</title>
 </head>
 <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid ">
+          <a class="navbar-brand" href="#"></a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+              <a class="nav-link" aria-current="page" href="/index.html">Home</a>
+              <a class="nav-link" href="/about.html">About</a>
+              <a class="nav-link active" href="/contact.html">Contact</a>
+              <a class="nav-link" href="/work.html">Portfolio</a>
+            </div>
+          </div>
+        </div>
+      </nav>
     <h1 class="text-center mt-5 mb-5">Let's get in touch!</h1>
     <div class="container contact text-center">
         <h3>Email</h3>
