--- a/index.html
+++ b/index.html
@@ -16,11 +16,27 @@
     <title>Anna Kwiatkowska - portfolio</title>
 </head>
 <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container-fluid ">
+    <a class="navbar-brand" href="#"></a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav">
+        <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
+        <a class="nav-link" href="/about.html">About</a>
+        <a class="nav-link" href="/contact.html">Contact</a>
+        <a class="nav-link" href="/work.html">Portfolio</a>
+      </div>
+    </div>
+  </div>
+</nav>
     <div class="hero">
         <h2>Hi! I am</h2>
         <h1>Anna Kwiatkowska</h1>
         <p>Front-end developer based in Czech Republic</p>
-        <a href="#" class="btn button mt-3">Get Started</a>
+        <a href="/work.html" class="btn button mt-3">Get Started</a>
     </div>
     <div class="project mt-5">
         <h3>Weather App</h3>
