--- a/index.html
+++ b/index.html
@@ -68,7 +68,34 @@
             <img src="images/forecast.PNG" alt="weather app" class="img-fluid"/>
         </div>
     </div>
-    <div class="footnote">Hosted on <a href="https://github.com/Fiorlore/portfolio-project" target="_blank">Git-Hub</a></div>
     
+    <footer>
+        <div class="contact-box">
+            <div class="row">
+                <div class=" d-none d-md-block col-md-6 text-end">
+                    <h4>Work inquiry</h4>
+                    <p>Let's work together!</p>
+                </div>
+                <div class="col-md-6 contactme-button">
+                    <a class="btn button" href="/contact.html">Contact me</a>
+                </div>
+            </div>
+        </div>
+        <div class="text-center email-container">
+            <a href="mailto:wkwiatki@gmail.com" class="text-center email-link">wkwiatki@gmail.com</a>
+        </div>
+        <div class="social-links text-center">
+            <a href="https://instagram.com/annakwiat" target="_blank">
+                <i class="fab fa-instagram"></i>
+            </a>
+            <a href="https://github.com/Fiorlore" target="_blank">
+                <i class="fa-brands fa-github"></i>
+            </a>
+            <a href="https://twitter.com/kwiatkoska" target="_blank">
+                <i class="fa-brands fa-twitter"></i>
+            </a>
+        </div>
+    </footer>
+    <div class="footnote">Hosted on <a href="https://github.com/Fiorlore/portfolio-project" target="_blank">Git-Hub</a></div>
 </body>
 </html>
