--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Contact Anna Kwiatkowska, front-end developer">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet"  href="styles/portfolio.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -13,7 +14,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/c7ca503bcb.js" crossorigin="anonymous"></script>
     
-    <title>Anna Kwiatkowska - about</title>
+    <title>Anna Kwiatkowska - contact</title>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -24,10 +25,10 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-              <a class="nav-link" aria-current="page" href="/index.html">Home</a>
-              <a class="nav-link" href="/about.html">About</a>
-              <a class="nav-link active" href="/contact.html">Contact</a>
-              <a class="nav-link" href="/work.html">Portfolio</a>
+              <a class="nav-link" aria-current="page" href="/index.html" title="Homepage">Home</a>
+              <a class="nav-link" href="/about.html" title="About Anna">About</a>
+              <a class="nav-link active" href="/contact.html" title="Contact me">Contact</a>
+              <a class="nav-link" href="/work.html" title="My work">Portfolio</a>
             </div>
           </div>
         </div>
@@ -35,18 +36,22 @@
     <h1 class="text-center mt-5 mb-5">Let's get in touch!</h1>
     <div class="container contact text-center">
         <h3>Email</h3>
-        <a href="mailto:wkwiatki@gmail.com">
+        <a href="mailto:wkwiatki@gmail.com" title="Email Anna">
         <p>wkwiatki@gmail.com</p>
     </a>
     <h3>Twitter</h3>
-        <a href="https://twitter.com/kwiatkoska" target="_blank">
+        <a href="https://twitter.com/kwiatkoska" target="_blank" title="Anna's Twitter account">
         <p>@kwiatkoska</p>
     </a>
     <h3>Instagram</h3>
-        <a href="https://instagram.com/annakwiat" target="_blank">
+        <a href="https://instagram.com/annakwiat" target="_blank" title="Anna's Instagram">
         <p>@annakwiat</p>
     </a>
 
+    </div>
+
+    <div class="d-flex justify-content-center mt-5">
+      <a class="btn button-outline" href="/index.html">Back to hompage</a>
     </div>
 </body>
 </html>
