--- a/work.html
+++ b/work.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Anna Kwiatkowska's work - projects portfolio, front-end developer">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet"  href="styles/portfolio.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -24,10 +25,10 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-              <a class="nav-link" aria-current="page" href="/index.html">Home</a>
-              <a class="nav-link" href="/about.html">About</a>
-              <a class="nav-link" href="/contact.html">Contact</a>
-              <a class="nav-link active" href="/work.html">Portfolio</a>
+              <a class="nav-link" aria-current="page" href="/index.html" title="Homepage">Home</a>
+              <a class="nav-link" href="/about.html" title="About Anna">About</a>
+              <a class="nav-link" href="/contact.html" title="Contact me">Contact</a>
+              <a class="nav-link active" href="/work.html" title="My work">Portfolio</a>
             </div>
           </div>
         </div>
@@ -39,8 +40,8 @@
     <div class="container">
         <div class="row mb-5">
             <div class="col-md-6">
-                <a href="https://frosty-nobel-5a502d.netlify.app" target="_blank" class="img-link">
-                <img class="img-fluid pic" src="images/dict.PNG"/>
+                <a href="https://frosty-nobel-5a502d.netlify.app" target="_blank" class="img-link" title="Online Dictionary">
+                <img class="img-fluid pic" src="images/dict.PNG" alt="Online Dictionary" />
                 </a>
                 <div class="content text-center">
                     <h3>Dictionary</h3>
@@ -48,8 +49,8 @@
                 </div>
             </div>
             <div class="col-md-6">
-                <a href="https://youthful-borg-cd0b97.netlify.app" target="_blank" class="img-link">
-                <img class="img-fluid pic" src="images/forecast.PNG"/>
+                <a href="https://youthful-borg-cd0b97.netlify.app" target="_blank" class="img-link" title="Weather Forecast">
+                <img class="img-fluid pic" src="images/forecast.PNG" alt="Weather Forecast" />
                 </a>
                 <div class="content text-center">
                     <h3>Weather Forecast</h3>
@@ -59,8 +60,8 @@
         </div>
         <div class="row mb-5">
             <div class="col-md-6">
-                <a href="https://admiring-curie-afac98.netlify.app" target="_blank" class="img-link">
-                <img class="img-fluid pic" src="images/weathap.PNG"/>
+                <a href="https://admiring-curie-afac98.netlify.app" target="_blank" class="img-link" title="React Weather App">
+                <img class="img-fluid pic" src="images/weathap.PNG" alt="React Weather App" />
                 </a>
                 <div class="content text-center">
                     <h3>Weather App</h3>
@@ -68,8 +69,8 @@
                 </div>
             </div>
             <div class="col-md-6">
-                <a href="https://focused-shaw-6fbe06.netlify.app/" target="_blank" class="img-link">
-                <img class="img-fluid pic" src="images/miniw.PNG"/>
+                <a href="https://focused-shaw-6fbe06.netlify.app/" target="_blank" class="img-link" title="Mini Weather App">
+                <img class="img-fluid pic" src="images/miniw.PNG" alt="Mini Weather App" />
                 </a>
                 <div class="content text-center">
                     <h3>Minimalist Weather App</h3>
@@ -79,6 +80,30 @@
         </div>
     </div>
 </div>
+        
+<footer>
+    <div class="contact-box">
+        <div class="row">
+            <div class=" d-none d-md-block col-md-6 text-end">
+                <h4>Work inquiry</h4>
+                <p>Let's work together!</p>
+            </div>
+            <div class="col-md-6 contactme-button">
+                <a class="btn button" href="/contact.html" title="Contact">Contact me</a>
+            </div>
+        </div>
+    </div>
+    <div class="text-center email-container">
+        <a href="mailto:wkwiatki@gmail.com" class="text-center email-link" title="Email Anna">wkwiatki@gmail.com</a>
+    </div>
+    <div class="social-links text-center">
+        <a href="https://instagram.com/annakwiat" target="_blank" title="Anna's Instagram">
+            <i class="fab fa-instagram"></i>
+        </a>
+    </div>
+</footer>
 
+
+    <div class="footnote">Hosted on <a href="https://github.com/Fiorlore/portfolio-project" target="_blank">Git-Hub</a></div>
 </body>
 </html>
