--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
     <title>Anna Kwiatkowska - contact</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
         <div class="container-fluid ">
           <a class="navbar-brand" href="#"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -33,7 +33,9 @@
           </div>
         </div>
       </nav>
-    <h1 class="text-center mt-5 mb-5">Let's get in touch!</h1>
+      <div class="contact-hero mb-5">
+    <h1 class="text-center ">Let's get in touch!</h1>
+  </div>
     <div class="container contact text-center">
         <h3>Email</h3>
         <a href="mailto:wkwiatki@gmail.com" title="Email Anna">
